# onnx_ocr

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  config.yaml
include/loaders/: config_loader.h  image_loader.h
include/onnx_predictor/: onnx_predictor.h
src/: main.cpp
src/loaders/: config_loader.cpp  image_loader.cpp
src/onnx_predictor/: onnx_predictor.cpp
